--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "request-ip": "^2.1.3",
     "sanitize-filename": "^1.6.3",
     "signale": "^1.4.0",
+    "ua-parser-js": "^2.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
